Browser Support and Fixing Flexbox Gap in Safari

--- a/Tutorial/09-Omnifood-Optimizations/css/queries.css
+++ b/Tutorial/09-Omnifood-Optimizations/css/queries.css
@@ -142,7 +142,10 @@ Also, the root square element's size can not be changed and thus 1rem = 1em = 16
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(255, 255, 255, 0.95);
+    background-color: rgba(255, 255, 255, 0.9);
+    /*Applies a filter to the element behind it*/
+    -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(10px);
     /*Animations have been optimized by CSS to be paired with transform. So instead of animating left or anything like this */
     transform: translateX(100%);
 
@@ -311,3 +314,57 @@ Also, the root square element's size can not be changed and thus 1rem = 1em = 16
 - Spacing System (px):
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
+
+/**********************/
+/* FIXING SAFARI FLEXBOX GAP*/
+/**********************/
+
+/* TO BE USED WITH THE script.js */
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+  margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
+  }
+}
